# conan-docker-tools

./: .env  .gitattributes  .gitignore  .travis.yml  README.md  appveyor.yml  azure-pipelines.yml  build.py  bump_version.py  conan_version.txt  docker-compose.yml  rebuild_and_upload.py  run.py  test.py  update_cmake.py
.ci/: Jenkinsfile  README.md  conan_center_index.jenkinsfile  conan_center_index_legacy.jenkinsfile  generate.jenkinsfile  generate_legacy.jenkinsfile  new_ci.jenkinsfile  on_conan_release.jenkinsfile  pipeline.jenkinsfile  xenial.jenkinsfile
.github/: CONTRIBUTING.md  ISSUE_TEMPLATE.md  PULL_REQUEST_TEMPLATE.md  settings.yml  stale.yml
android-clang_8/: Dockerfile  build.sh  cmake-wrapper  run.sh
android-clang_8-armv7/: Dockerfile  run.sh
android-clang_8-armv8/: Dockerfile  run.sh
android-clang_8-x86/: Dockerfile  build.sh  run.sh
android-clang_9/: Dockerfile  build.sh  run.sh
android-clang_9-armv7/: Dockerfile  build.sh  run.sh
android-clang_9-armv8/: Dockerfile  build.sh  run.sh
android-clang_9-x86/: Dockerfile  build.sh  run.sh
base/: Dockerfile
clang/: Dockerfile
clang-cci/: Dockerfile  Dockerfile.old
clang_10/: Dockerfile
clang_11/: Dockerfile  build.sh
clang_12/: Dockerfile  build.sh  run.sh
clang_3.8/: Dockerfile  build.sh  run.sh  test.sh
clang_3.9/: Dockerfile  build.sh  run.sh  sources.list  test.sh
clang_3.9-i386/: Dockerfile  build.sh  run.sh  test.sh
clang_3.9-x86/: Dockerfile  build.sh  run.sh  sources.list  test.sh
clang_4.0/: Dockerfile  build.sh  run.sh  sources.list  test.sh
clang_4.0-i386/: Dockerfile  build.sh  run.sh  test.sh
clang_4.0-x86/: Dockerfile  build.sh  run.sh  test.sh
clang_5.0/: Dockerfile  build.sh  run.sh  test.sh
clang_5.0-i386/: Dockerfile  build.sh  run.sh  test.sh
clang_5.0-x86/: Dockerfile  build.sh  run.sh  test.sh
clang_6.0/: Dockerfile  build.sh  run.sh  test.sh
clang_6.0-x86/: Dockerfile  build.sh  run.sh  test.sh
clang_7/: Dockerfile  build.sh  run.sh  test.sh
clang_7-x86/: Dockerfile  build.sh  run.sh  test.sh
clang_7.0/: Dockerfile  build.sh  run.sh  test.sh
clang_7.0-x86/: Dockerfile  build.sh  run.sh  test.sh
clang_8/: Dockerfile  run.sh
clang_8-x86/: Dockerfile  run.sh
clang_9/: Dockerfile  build.sh  run.sh
clang_9-x86/: Dockerfile  run.sh
conan_docker_tools/: application.py  arguments.py  build.py  compiler.py  deploy.py  image.py  main.py  test.py  variables.py
conan_installer/: Dockerfile  build.sh
conan_server/: Dockerfile
conan_test_azure/: Dockerfile  build.sh  run.sh  test.sh
conan_test_docker/: Dockerfile
conan_tests/: Dockerfile  build.sh  run.sh
example_project_test/: .travis.yml
gcc/: Dockerfile
gcc-cci/: Dockerfile
gcc_10/: Dockerfile
gcc_10-armv7/: Dockerfile
gcc_10-armv7hf/: Dockerfile
gcc_10-armv8/: Dockerfile
gcc_10-x86/: Dockerfile
gcc_11/: Dockerfile
gcc_11-armv7/: Dockerfile
gcc_11-armv7hf/: Dockerfile
gcc_11-armv8/: Dockerfile
gcc_4.6/: Dockerfile  build.sh  run.sh  test.sh
gcc_4.8/: Dockerfile  build.sh  run.sh  test.sh
gcc_4.8-x86/: Dockerfile  build.sh  run.sh
gcc_4.9/: Dockerfile  build.sh  run.sh  test.sh
gcc_4.9-armv7/: Dockerfile  build.sh  run.sh  test.sh
gcc_4.9-armv7hf/: .dockerignore  Dockerfile  build.sh  run.sh  test.sh
gcc_4.9-i386/: Dockerfile  build.sh  run.sh  test.sh
gcc_4.9-x86/: Dockerfile  build.sh  run.sh  test.sh
gcc_5/: Dockerfile  build.sh  run.sh  test.sh
gcc_5-armv7/: Dockerfile  build.sh  run.sh  test.sh
gcc_5-armv7hf/: Dockerfile  build.sh  run.sh  test.sh
gcc_5-armv8/: Dockerfile  sources.list
gcc_5-i386/: Dockerfile  build.sh  run.sh  test.sh
gcc_5-x86/: Dockerfile  build.sh  run.sh  test.sh
gcc_5.2/: Dockerfile  build.sh  run.sh  sources.list  test.sh
gcc_5.3/: Dockerfile  build.sh  run.sh  test.sh
gcc_5.4/: Dockerfile  build.sh  run.sh  test.sh
gcc_6/: Dockerfile  build.sh  run.sh  test.sh
gcc_6-armv7/: Dockerfile  build.sh  run.sh  test.sh
gcc_6-armv7hf/: Dockerfile  build.sh  run.sh  test.sh
gcc_6-armv8/: Dockerfile  arm64.list  sources.list
gcc_6-i386/: Dockerfile  build.sh  run.sh  test.sh
gcc_6-x86/: Dockerfile  build.sh  run.sh  test.sh
gcc_6.2/: Dockerfile  build.sh  run.sh  sources.list  test.sh
gcc_6.3/: Dockerfile  build.sh  run.sh  test.sh
gcc_6.4/: Dockerfile  build.sh  run.sh  test.sh
gcc_7/: Dockerfile  build.sh  run.sh  test.sh
gcc_7-armv7/: Dockerfile  build.sh  run.sh  test.sh
gcc_7-armv7hf/: Dockerfile  armhf.list  build.sh  run.sh  test.sh
gcc_7-armv8/: Dockerfile  arm64.list  sources.list
gcc_7-centos6/: Dockerfile  build.sh  sudo
gcc_7-centos6-x86/: Dockerfile  build.sh  cloudlinux.repo
gcc_7-i386/: Dockerfile  build.sh  run.sh  test.sh
gcc_7-mingw/: Dockerfile  build.sh  run.sh  test.sh
gcc_7-x86/: Dockerfile  build.sh  run.sh  test.sh
gcc_7.1/: Dockerfile  build.sh  test.sh
gcc_7.2/: Dockerfile  build.sh  run.sh  test.sh
gcc_8-armv7/: Dockerfile  build.sh  run.sh  test.sh
gcc_8-armv7hf/: Dockerfile  build.sh  run.sh  test.sh
gcc_8-armv8/: Dockerfile  sources.list
images/: .env  (+9 more)
modern/test/gcc/conan/: CMakeLists.txt  conanfile.py  main.c  run.py  test_conan.sh
modern/tests/workingdir/simple/: CMakeLists.txt  main.c  main.cpp
test/clang/conan/: CMakeLists.txt  main.c  main.cpp  run.py  run.sh  test_conan.sh
test/simple/: CMakeLists.txt  main.c  main.cpp  run.sh
test/system/: CMakeLists.txt  main.cpp  run.py  run.sh  sources.list
(+226 files in other folders)
